--- a/gamecritic/templates/base.html
+++ b/gamecritic/templates/base.html
@@ -21,6 +21,11 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'game_list' %}">Games</a>
       </li>
+      {% if user.is_superuser %}
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'add_game' %}">Add Game</a>
+      </li>
+      {% endif %}
       {% if not user.is_authenticated %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'login_user' %}">Login</a>
@@ -37,7 +42,8 @@
     </ul>
   </div>
 </nav>
-<div class="main" id="main">
+
+<div class="main" id="main" >
 {% block content %}
 {% endblock %}
 </div>
