--- a/gamecritic/templates/form.html
+++ b/gamecritic/templates/form.html
@@ -1,8 +1,8 @@
 {% extends 'base.html'%}
 {%block content%}
-<form action="." method="post" class="book-form">
+<form action="." method="post" class="game-form">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Log-in">
+    <input type="submit" value="Submit">
 </form>
 {% endblock %}
