--- a/gamecritic/templates/game_list.html
+++ b/gamecritic/templates/game_list.html
@@ -1,22 +1,22 @@
 {% extends 'base.html'%}
 {%block content%}
 {% for game in games %}
-    <div class="list card">
+    <div class="list card text-white bg-secondary mb-3">
       <div class="card-header">
         {{game.name}}
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Release date: {{game.release_date}}</li>
-        <li class="list-group-item">Developer: {{game.developer}}</li>
-        <li class="list-group-item">Publisher: {{game.publisher}}</li>
-        <li class="list-group-item">Genre(s): {{game.game_genre}}</li>
-        <li class="list-group-item">Description: {{game.description}}</li>
-        <li class="list-group-item">
-            <a class="btn btn-dark" href="{% url 'game_review_list' game_id=game.id%}" role="button">Reviews</a>
+        <li class="list-group-item text-white bg-secondary">Release date: {{game.release_date}}</li>
+        <li class="list-group-item text-white bg-secondary">Developer: {{game.developer}}</li>
+        <li class="list-group-item text-white bg-secondary">Publisher: {{game.publisher}}</li>
+        <li class="list-group-item text-white bg-secondary">Genre(s): {{game.game_genre}}</li>
+        <li class="list-group-item text-white bg-secondary">Description: {{game.description}}</li>
+        <li class="list-group-item text-white bg-secondary">
+            <a class="btn btn-light" href="{% url 'game_review_list' game_id=game.id%}" role="button">Reviews</a>
             {% if user.is_authenticated %}
-                <a class="btn btn-dark" href="{% url 'add_review' game_id=game.id%}">Add review</a>
+                <a class="btn btn-light" href="{% url 'add_review' game_id=game.id%}">Add review</a>
                 {% if user.is_superuser %}
-                    <a class="btn btn-dark" href="{% url 'edit_game' game_id=game.id%}" role="button">Edit game</a>
+                    <a class="btn btn-light" href="{% url 'edit_game' game_id=game.id%}" role="button">Edit game</a>
                 {% endif %}
             {% endif %}
         </li>
