update game list

--- a/gamecritic/static/styles.css
+++ b/gamecritic/static/styles.css
@@ -12,7 +12,8 @@
 }
 
 body {
-background-image: url('img/background.jpg')
+    background-attachment: fixed;
+    background-image: url('img/background.jpg');
 }
 
 .game-form{
