--- a/gamecritic/templates/game_list.html
+++ b/gamecritic/templates/game_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 {%block content%}
 {% for game in games %}
-<div class="card mb-3 text-white bg-secondary">
+<div class="card mb-3 text-white bg-dark">
   <div class="row g-0">
     <div class="col-md-4">
       <img src="{{game.image_url}}" class="img-fluid rounded-start" alt="...">
@@ -10,12 +10,12 @@
       <div class="card-body">
         <h5 class="card-title">{{game.name}}</h5>
         <ul class="list-group list-group-flush">
-        <li class="list-group-item text-white bg-secondary">Release date: {{game.release_date}}</li>
-        <li class="list-group-item text-white bg-secondary">Developer: {{game.developer}}</li>
-        <li class="list-group-item text-white bg-secondary">Publisher: {{game.publisher}}</li>
-        <li class="list-group-item text-white bg-secondary">Genre(s): {{game.game_genre}}</li>
-        <li class="list-group-item text-white bg-secondary">Description: {{game.description}}</li>
-        <li class="list-group-item text-white bg-secondary">
+        <li class="list-group-item text-white bg-dark">Release date: {{game.release_date}}</li>
+        <li class="list-group-item text-white bg-dark">Developer: {{game.developer}}</li>
+        <li class="list-group-item text-white bg-dark">Publisher: {{game.publisher}}</li>
+        <li class="list-group-item text-white bg-dark">Genre(s): {{game.game_genre}}</li>
+        <li class="list-group-item text-white bg-dark">Description: {{game.description}}</li>
+        <li class="list-group-item text-white bg-dark">
             <a class="btn btn-light" href="{% url 'game_review_list' game_id=game.id%}" role="button">Reviews</a>
             {% if user.is_authenticated %}
                 <a class="btn btn-light" href="{% url 'add_review' game_id=game.id%}">Add review</a>
