--- a/gamecritic/templates/base.html
+++ b/gamecritic/templates/base.html
@@ -11,7 +11,7 @@
     <title>Gamecritic</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar  navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="{% url 'index' %}">Game critic</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -39,6 +39,16 @@
         <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
       </li>
       {% endif %}
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Genres
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="{% url 'game_list' %}">Action</a></li>
+            <li><a class="dropdown-item" href="{% url 'game_list' %}">Another action</a></li>
+            <li><a class="dropdown-item" href="{% url 'game_list' %}">Something else here</a></li>
+          </ul>
+        </li>
     </ul>
   </div>
 </nav>
