--- a/gamecritic/templates/game_review_list.html
+++ b/gamecritic/templates/game_review_list.html
@@ -12,7 +12,11 @@
           <li class="list-group-item text-white bg-dark">Release date: {{game.release_date}}</li>
           <li class="list-group-item text-white bg-dark">Developer: {{game.developer}}</li>
           <li class="list-group-item text-white bg-dark">Publisher: {{game.publisher}}</li>
-          <li class="list-group-item text-white bg-dark">Genre(s): {{game.game_genre}}</li>
+          <li class="list-group-item text-white bg-dark">Genre(s):
+            {% for genre in game.game_genre.all %}
+            {{genre}},
+            {% endfor %}
+          </li>
           <li class="list-group-item text-white bg-dark">Description: {{game.description}}</li>
           {% if user.is_authenticated %}
             <li class="list-group-item"><a class="btn btn-dark" href="{% url 'add_review' game_id=game.id%}">Add review</a></li>
